--- a/LMS/LMS/Views/Admin/Result.cshtml
+++ b/LMS/LMS/Views/Admin/Result.cshtml
@@ -22,30 +22,31 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-6">
-                                <form role="form">
+
+
+                                <form method="post">
 
                                     <div class="form-group">
-                                        <label>Session</label>
-                                        <select class="form-control">
-                                            <option></option>
-                                            <option>Section A</option>
-                                            <option>Section B</option>
-                                            <option>Section C</option>
-                                            <option>Section D</option>
+                                        <label>Departments</label>
+                                        <select id="DepartmentComboBox" class="form-control">
+                                            <option value="-1">Select a department</option>
+                                            @foreach (var r in ViewBag.departments)
+                                            {
+                                                <option value="@r.DepartmentID">@r.DepartmentName</option>
+                                                
+
+                                            }
+
 
                                         </select>
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Section</label>
-                                        <select class="form-control">
-                                            <option></option>
-                                            <option>Section A</option>
-                                            <option>Section B</option>
-                                            <option>Section C</option>
-                                            <option>Section D</option>
-
+                                        <label>Students</label>
+                                        <select id="StudentComboBox" class="form-control">
+                                            <option value="-1">Select a Students</option>
                                         </select>
+
                                     </div>
 
                                     <div class="form-group">
@@ -75,7 +76,7 @@
                                     </div>
 
 
-                                    
+
 
                                     <div class="form-group">
                                         <label>Date</label>
@@ -115,3 +116,26 @@
     <!-- /.container-fluid -->
 </div>
 <!-- /#page-wrapper -->
+
+<script src="~/Content/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#DepartmentComboBox').on('change', function () {
+            var DepartmentsID = $('#DepartmentComboBox option:selected').val();
+            $.ajax({
+                type: 'GET',
+                data: { DepartmentsID: DepartmentsID },
+                url:'@Url.Action("StudentsFunction", "Admin")',
+                success: function (result) {
+                    var stud = JSON.stringify(result);
+                    var w = '<option value="-1">Select a Student</option>';
+                    for (var i = 0; i < stud.length; i++) {
+                        w += '< option value = "'+stud[i].Id+'">'+ stud[i].name+'</option >';
+
+                    }
+                    $('#StudentComboBox').html(w);
+                }
+            });       
+        });
+    });
+</script>
