--- a/LMS/LMS/Views/Employee/EmployeeDetails.cshtml
+++ b/LMS/LMS/Views/Employee/EmployeeDetails.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Views/Shared/_Employee.cshtml";
 }
 
-<h2>EmployeeDetails</h2>
+ 
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Courses</h1>
+                <h1 class="page-header">Empoyee Details</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
